--- a/configmap.yaml
+++ b/configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: dummy-configmap
-data:
-  key: "value"
+	    kind: ConfigMap
+	    metadata:
+	      name: dummy-configmap
+	      data:
+	        message: "hello world"
